examples/pos/assign_operators.effekt
def main() = {
  var x = 1
  var y = 2

  x += y
  println(x) // 3
  y -= 1
  println(y) // 1
}