examples/neg/def_instead_of_val.effekt
def addOne(x: Int) = x + 1

def three = addOne(2)

def main() = ()